# nbp

./: .gitignore  Cargo.toml  Justfile  README.md  shell.nix
.direnv/: nix-profile-25.11-i5zbq5by44gz4w1v  nix-profile-25.11-i5zbq5by44gz4w1v.rc
spec/: nbp.json
src/: api.rs  client.rs  lib.rs  models.rs  nbp_error.rs
src/api/: exchange_rates.rs  gold_prices.rs
src/api/exchange_rates/: get_rates.rs  get_tables.rs
src/api/gold_prices/: get_gold_prices.rs
src/client/: paths.rs  service_client.rs
src/models/: currency_code.rs  date_parameters.rs  exchange_rates.rs  gold_prices.rs  table_type.rs
src/openapi/apis/: configuration.rs  default_api.rs
src/openapi/models/: currency_exchange_table.rs  exchange_rate.rs  gold_price.rs  mod.rs  table_type.rs
tests/: exchage_rates.rs  exchangerates_rates.rs  gold_prices.rs  goldprice.rs
