[package]
name = "nbp"
description = "A Rust library for accessing the National Bank of Poland's API."
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/compiledpl/nbp"
homepage = "https://github.com/compiledpl/nbp"
authors = ["compiled.pl <contact@compiled.pl>"]
keywords = ["nbp", "api", "finance", "currency", "poland"]
categories = ["finance", "api-bindings"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
