[package]
name = "nbp"
description = "A Rust library for accessing the National Bank of Poland's API."
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/compiledpl/nbp"
homepage = "https://github.com/compiledpl/nbp"
authors = ["compiled.pl <contact@compiled.pl>"]
keywords = ["nbp", "api", "finance", "currency", "poland"]
categories = ["finance", "api-bindings"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
